--- a/css/layout/Footer.css
+++ b/css/layout/Footer.css
@@ -147,166 +147,165 @@ background: #2E2F42;
     }
 
     @media screen and (min-width: 1158px) {
-        
+        .footer{
+            background-color: #2E2F42;
+            padding-top: 100px;
+            padding-bottom: 100px;
+            display: flex;
+            }
+            
+            .allfoot-container{
+            display: flex;
+            align-items: baseline;
+            margin: 0 auto;
+            }
+            
+            .logo-footer-container{
+            margin-right: 120px;
+            }
+            
+            .footer-list{
+            display: flex;
+            gap: 16px;
+            }
+            
+            .footer-list-link{
+            width: 100%;
+            height: 100%;
+            background-color: #4d5ae5;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            }
+            
+            .footer-list-icon{
+            width: 40px;
+            height: 40px;
+            }
+            
+            .footer-list-link:hover,
+            .footer-list-link:focus {
+            background-color: #31d0aa; 
+            }
+            
+            .foot-logo{
+            color: #4d5ae5;
+            font-family: Raleway, sans-serif;
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 1.17;
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+            display: inline-block;
+            margin-bottom: 16px;
+            }
+            
+            .footer-web{
+            color: #4D5AE5;
+            font-family: Raleway;
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 1.17;
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+            }
+            
+            .footer-studio{
+            color: #F4F4FD;
+            font-family: Raleway;
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 1.17;
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+            }
+            
+            .text-footer{
+            color: #F4F4FD;
+            width: 264px;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 1.5;
+            letter-spacing: 0.02em;
+            }
+            
+            .footer-sm-list{
+            color: #FFF;
+            font-family: Roboto;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 1.5;
+            letter-spacing: 0.02em;
+            margin-bottom: 16px;
+            }
+            
+            .svg-footer{
+            fill: #f4f4fd
+            }
+            
+            .social-media{
+            margin-right: 80px;
+            }
+            
+            .footer-form{
+            display: flex;
+            gap: 24px;
+            }
+            
+            .subscribe{
+            color: #FFF;
+            font-family: Roboto;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 1.5;
+            letter-spacing: 0.02em;
+            margin-bottom: 16px;
+            }
+            
+            .input-footer{
+            width: 264px;
+            height: 40px;
+            padding: 8px 16px;
+            color: #ffffff;
+            background-color: transparent;
+            font-size: 12px;
+            line-height: 1.5;
+            letter-spacing: 0.04em;
+            padding-left: 16px;
+            border-radius: 4px;
+            border: 1px solid #ffffff; 
+            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+            }
+            
+            .input-footer::placeholder{
+            color: #ffffff;
+            }
+            
+            .btn-subscribe{
+            min-width: 165px;
+            height: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-weight: 500;
+            line-height: 1.5;
+            letter-spacing: 0.04em;
+            color: #ffffff;
+            background-color: #4D5AE5;
+            border: none;
+            border-radius: 4px;
+            }
+            
+            .subscribe-svg{
+            margin-left: 16px;
+            }
     }
 
 
-/* .footer{
-    background-color: #2E2F42;
-    padding-top: 100px;
-    padding-bottom: 100px;
-    display: flex;
-    }
-    
-    .allfoot-container{
-    display: flex;
-    align-items: baseline;
-    margin: 0 auto;
-    }
-    
-    .logo-footer-container{
-    margin-right: 120px;
-    }
-    
-    .footer-list{
-    display: flex;
-    gap: 16px;
-    }
-    
-    .footer-list-link{
-    width: 100%;
-    height: 100%;
-    background-color: #4d5ae5;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    
-    .footer-list-icon{
-    width: 40px;
-    height: 40px;
-    }
-    
-    .footer-list-link:hover,
-    .footer-list-link:focus {
-    background-color: #31d0aa; 
-    }
-    
-    .foot-logo{
-    color: #4d5ae5;
-    font-family: Raleway, sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    display: inline-block;
-    margin-bottom: 16px;
-    }
-    
-    .footer-web{
-    color: #4D5AE5;
-    font-family: Raleway;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    }
-    
-    .footer-studio{
-    color: #F4F4FD;
-    font-family: Raleway;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    }
-    
-    .text-footer{
-    color: #F4F4FD;
-    width: 264px;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    }
-    
-    .footer-sm-list{
-    color: #FFF;
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    margin-bottom: 16px;
-    }
-    
-    .svg-footer{
-    fill: #f4f4fd
-    }
-    
-    .social-media{
-    margin-right: 80px;
-    }
-    
-    .footer-form{
-    display: flex;
-    gap: 24px;
-    }
-    
-    .subscribe{
-    color: #FFF;
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    margin-bottom: 16px;
-    }
-    
-    .input-footer{
-    width: 264px;
-    height: 40px;
-    padding: 8px 16px;
-    color: #ffffff;
-    background-color: transparent;
-    font-size: 12px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    padding-left: 16px;
-    border-radius: 4px;
-    border: 1px solid #ffffff; 
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    }
-    
-    .input-footer::placeholder{
-    color: #ffffff;
-    }
-    
-    .btn-subscribe{
-    min-width: 165px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #ffffff;
-    background-color: #4D5AE5;
-    border: none;
-    border-radius: 4px;
-    }
-    
-    .subscribe-svg{
-    margin-left: 16px;
-    } */
